use id in genres and languages tables
